<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/ukr_yellow"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_are_you_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/yes"
        android:textColor="@color/ukr_yellow"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_are_you_sure" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/no"
        android:textColor="@color/ukr_yellow"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_yes"
        app:layout_constraintTop_toBottomOf="@+id/tv_are_you_sure" />


</androidx.constraintlayout.widget.ConstraintLayout>