<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".BmiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/toolbarTheme"
        app:layout_constraintBottom_toTopOf="@+id/rg_units"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/ukr_yellow" />

    <RadioGroup
        android:id="@+id/rg_units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rg_units_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/til_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_bmi">

        <RadioButton
            android:id="@+id/rb_us_units"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_uk_units"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/ukr_yellow"
        app:hintTextColor="@color/ukr_yellow"
        app:layout_constraintBottom_toTopOf="@+id/til_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_units">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/medium_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_height"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/ukr_yellow"
        app:hintTextColor="@color/ukr_yellow"
        app:layout_constraintBottom_toTopOf="@+id/fl_calculate_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_weight">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/medium_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/fl_calculate_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/fl_calculate_bmi_background"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_bmi_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/calculate"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_bmi_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fl_clear_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_calculate_bmi"
        tools:text="BMI Result: 123" />

    <FrameLayout
        android:id="@+id/fl_clear_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/fl_calculate_bmi_background"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tv_bmi_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bmi_result">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/clear_input"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>